2005-03-13  John Luke  <john.luke@gmail.com>

	* configure.in: remove gdkdock & c-related stuff
	add Core/src/MonoDevelop.Dock/Makefile output
	* Core/gdldock: kill
	* Core/src/Makefile.am: add MonoDevelop.Dock
	* Core/Makefile.am: remove gdldock

2005-03-12  Todd Berman  <tberman@off.net>

	* configure.in: push/branch 0.6

2005-02-28  John Luke  <john.luke@gmail.com>

	* monodevelop.in: use /bin/sh and exec instead
	of running from bash

2005-02-24  John Luke  <john.luke@gmail.com>

	* configure.in: move JavaBinding to Extras
	and some incomplete dep-checking for ikvm

2005-02-09  John Luke  <john.luke@gmail.com>

	* */Makefile.am: build to build/bin/ so the make CSC='mcs -g'
	and then running with --debug will work
	almost fix distcheck
	* po/POTFILES.in: update
	* configure.in: dep on gtk-sharp-2 > 1.9.2

2005-02-10  Christian Hergert <christian.hergert@gmail.com>

	* configure.in: Gecko# updated their pkg-config settings. We now check
	for gecko-sharp-2.0.

2005-02-10  Todd Berman  <tberman@off.net>

	* Makefile.am: add --debug to make run.
	* monodevelop.xml: Add .mds and .mdp

2005-02-09  John Luke  <john.luke@gmail.com>

	* configure.in: remove obsolete NOTE

2005-02-07  Chris Toshok  <toshok@ximian.com>

	* configure.in: re-enable the debugger foo, with
	--enable-debugger.

2005-02-02  Christian Hergert <chris@mosaix.net>

	* configure.in: Added dynamic control of sqlite in monoquery
	via substring autofoo.

2005-01-31  Lluis Sanchez Gual  <lluis@novell.com>

	* configure.in: Added MonoDeveloperExtensions addin.

2005-01-26  John Luke  <john.luke@gmail.com>

	* configure.in: check for gnome-vfs

2005-01-14  Lluis Sanchez Gual  <lluis@novell.com>

	* configure.in: Removed some obsolete files from build.

2005-01-11  John Luke  <john.luke@gmail.com>

	* monodevelop.applications:
	* monodevelop.keys:
	* monodevelop.mime: kill old style mime stuff, since we depend
	on a newer gnome via gtk#2
	* configure.in: AC_SUBST the path of update_mime_database and