@@ -17,16 +17,6 @@ test -z "$srcdir" && srcdir=.
   DIE=1
 }
 
-(grep "^AM_PROG_LIBTOOL" $srcdir/configure.in >/dev/null) && {
-  (libtool --version) < /dev/null > /dev/null 2>&1 || {
-    echo
-    echo "**Error**: You must have \`libtool' installed to compile MonoDevelop."
-    echo "Get ftp://ftp.gnu.org/pub/gnu/libtool-1.2d.tar.gz"
-    echo "(or a newer version if it is available)"
-    DIE=1
-  }
-}
-
 (automake --version) < /dev/null > /dev/null 2>&1 || {
   echo
   echo "**Error**: You must have \`automake' installed to compile MonoDevelop."
@@ -39,17 +29,6 @@ test -z "$srcdir" && srcdir=.
 (intltoolize --version) < /dev/null > /dev/null 2>&1 || {
   echo
   echo "**Error**: You must have \`intltoolize' installed to compile MonoDevelop."
-  DIE=1
-}
-
-
-# if no automake, don't bother testing for aclocal
-test -n "$NO_AUTOMAKE" || (aclocal --version) < /dev/null > /dev/null 2>&1 || {
-  echo
-  echo "**Error**: Missing \`aclocal'.  The version of \`automake'"
-  echo "installed doesn't appear recent enough."
-  echo "Get ftp://ftp.gnu.org/pub/gnu/automake-1.3.tar.gz"
-  echo "(or a newer version if it is available)"
   DIE=1
 }
 
@@ -69,14 +48,6 @@ xlc )
   am_opt=--include-deps;;
 esac
 
-
-if grep "^AM_PROG_LIBTOOL" configure.in >/dev/null; then
-  if test -z "$NO_LIBTOOLIZE" ; then 
-    echo "Running libtoolize..."
-    libtoolize --force --copy
-  fi
-fi
-
 echo "Running glib-gettextize ..."
 glib-gettextize --force --copy ||
   { echo "**Error**: glib-gettextize failed."; exit 1; }
@@ -84,22 +55,6 @@ glib-gettextize --force --copy ||
 echo "Running intltoolize ..."
 intltoolize --force --copy --automake ||
   { echo "**Error**: intltoolize failed."; exit 1; }
-
-echo "Running aclocal $ACLOCAL_FLAGS ..."
-aclocal $ACLOCAL_FLAGS || {
-  echo
-  echo "**Error**: aclocal failed. This may mean that you have not"
-  echo "installed all of the packages you need, or you may need to"
-  echo "set ACLOCAL_FLAGS to include \"-I \$prefix/share/aclocal\""
-  echo "for the prefix where you installed the packages whose"
-  echo "macros were not found"
-  exit 1
-}
-
-if grep "^AM_CONFIG_HEADER" configure.in >/dev/null; then
-  echo "Running autoheader..."
-  autoheader || { echo "**Error**: autoheader failed."; exit 1; }
-fi
 
 echo "Running automake --gnu $am_opt ..."
 automake --add-missing --gnu $am_opt ||
@@ -109,7 +64,7 @@ echo "Running autoconf ..."
 WANT_AUTOCONF="2.5" autoconf || { echo "**Error**: autoconf failed."; exit 1; }
 
 
-conf_flags="--enable-maintainer-mode --enable-compile-warnings" #--enable-iso-c
+conf_flags="--enable-maintainer-mode --enable-compile-warnings"
 
 if test x$NOCONFIGURE = x; then
   echo Running $srcdir/configure $conf_flags "$@" ...
